--- a/utmxchange/pubspec.yaml
+++ b/utmxchange/pubspec.yaml
@@ -1,9 +1,5 @@
-name: utmxchange
+name: utm_x_change
 description: A new Flutter project.
-
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -18,20 +14,26 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.3.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-
-
+  flare_splash_screen: ^3.0.1 
+  font_awesome_flutter: ^8.8.1 
+  badges: ^1.1.1
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^0.1.2
+  fl_chart: ^0.9.4
+  flutter_slidable: "^0.5.4"
+  http: ^0.12.2
+  shared_preferences: ^0.5.8
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -45,9 +47,36 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+   - assets/flare_files/splash.flr
+   - assets/customIcons/icon_red.png
+   - assets/customIcons/icon_transparent.png
+   - assets/images/avator.png
+   - assets/images/friends.png
+   - assets/images/avator.jpg
+   - assets/images/headShape.png
+   - assets/images/underConstruction.png
+   - assets/images/logout.png
+   - assets/images/like.png
+   - assets/images/dislike.png
+   - assets/images/dosanddonts.png
+   - assets/images/shopping_home.png
+   - assets/images/checkListHome.png
+   - assets/images/documnets.png
+   - assets/images/tips.png
+   - assets/images/personal_9.png
+   - assets/images/noticeDesc.jpg
+   - assets/images/notice.jpg
+   - assets/customIcons/manage.png
+   - assets/customIcons/update.png
+   - assets/images/manage.png
+   - assets/images/update_gui.png
+   - assets/images/img1.png
+   - assets/images/img2.png
+   - assets/images/img3.jpg
+   - assets/images/img4.jpeg
+   - assets/images/img5.PNG
+   - assets/images/guideline.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -60,15 +89,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
+  fonts:
+    - family: Overlock
+      fonts:
+        - asset: assets/fonts/Overlock-Regular.ttf
+        - asset: assets/fonts/Overlock-Bold.ttf
+    - family: Roboto
+      fonts:
+        - asset: assets/fonts/Roboto-Regular.ttf
   #       - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
